--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,8 @@
         "noImplicitAny": false,
         "sourceMap": false,
         "typeRoots": ["node_modules/@types"]
-    }
+    },
+    "include": [
+      "src/*.ts"
+    ]
 }
